@@ -6,6 +6,8 @@ Wait for 2.1 if you are not willing to do testing/bug reporting.
 - New command-line tool: "netcache"
 - New command-line tool: "ansicat"
 - New command-line tool: "opnk"
+- Images of html files are now always downloaded
+- Reading position is now saved for the whole session
 
 ## 1.10 - July 31st 2023
 - IMPORTANT : new optional dependency : python-chardet
